syntax = "proto3";
option go_package = "./sku";
option java_package = "com.example.wechatmerchant.skurpc";
option java_multiple_files = true; // 需要指定输出多个文件

package sku;

message CommonRsp {
  uint64 code = 1;
  string msg = 2;
}


message SkuReq {
  repeated string sku_id = 1;
  uint64 page_number = 2;
  uint64 page_size = 3;
}

message SkuResp {
  CommonRsp common = 1;
  repeated SkuInfo data = 2;
  uint64 total = 3;
}

message SkuInfo {
  string sku_id = 1;
  string sku_name = 2;
  string sku_image = 3;
  uint32 item_id = 4;
  string item_name = 5;
  uint32 product_id = 6;
  string product_name = 7;
  uint64 ctime = 8;
  uint64 mtime = 9;
}

// 此处应该还要修改
message CreateOrUpdateSkuReq {
  string sku_id = 1;
  string sku_name = 2;
  string sku_image = 3;
  string sku_count = 4;
}

message SkuInventoryReq {
  string sku_id = 1;
}

message SkuInventoryResp {
  CommonRsp common = 1;
  repeated SkuInventoryInfo data = 2;
}

message SkuInventoryInfo {
  string sku_id = 1;
  uint64 inventory_qty = 2;
  uint64 damage_qty = 3;
}

service SkuService {
  rpc GetSkuInfo(SkuReq) returns (SkuResp);
  rpc CreateSkuInfo(CreateOrUpdateSkuReq) returns (CommonRsp);
  rpc Update(CreateOrUpdateSkuReq) returns (CommonRsp);
  rpc GetSkuInventoryInfo(SkuInventoryReq) returns (SkuInventoryResp);
}